--- a/css/ptu.less
+++ b/css/ptu.less
@@ -120,8 +120,10 @@ a.item {
     font-weight: bold;
   }
 
-.window-content {
-    background: #E0E8E8 !important;
+.actor, .edge, .feat, .ability, .item, .move, .form, .token-sheet, .scene-sheet {
+    .window-content {
+        background: #E0E8E8 !important;
+    }
 }
 
 .stat-block {
